--- a/src/main/java/graphics/fxml/CompareMenu.fxml
+++ b/src/main/java/graphics/fxml/CompareMenu.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="graphics.ProductMenu$CompareMenu"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.ProductMenu$CompareMenu">
+    <center>
+        <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <columns>
+                <TableColumn id="nameColumn" prefWidth="75.0" text="Name" />
+                <TableColumn id="priceColumn" prefWidth="75.0" text="Price" />
+                <TableColumn id="sellerColumn" prefWidth="75.0" text="Seller" />
+                <TableColumn id="rateColumn" prefWidth="104.0" text="Average Rate" />
+                <TableColumn id="brandColumn" prefWidth="64.0" text="Brand" />
+                <TableColumn id="explanationColumn" prefWidth="112.0" text="Explanation" />
+                <TableColumn id="supplyColumn" prefWidth="94.0" text="Supply" />
+            </columns>
+        </TableView>
+    </center>
+</BorderPane>
