--- a/src/main/java/graphics/fxml/CompareMenu.fxml
+++ b/src/main/java/graphics/fxml/CompareMenu.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx"
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.ProductMenu$CompareMenu">
     <center>
         <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -21,4 +21,7 @@
             </columns>
         </TableView>
     </center>
+    <bottom>
+        <Button alignment="CENTER" mnemonicParsing="false" onAction="#back" prefHeight="27.0" prefWidth="65.0" text="Back" BorderPane.alignment="CENTER" />
+    </bottom>
 </BorderPane>
