--- a/src/main/java/graphics/fxml/CustomerMenu.fxml
+++ b/src/main/java/graphics/fxml/CustomerMenu.fxml
@@ -7,14 +7,8 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.CustomerMenu">
     <children>
-        <VBox layoutX="21.0" layoutY="121.0" prefHeight="246.0" prefWidth="145.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+        <VBox layoutX="24.0" layoutY="113.0" prefHeight="246.0" prefWidth="145.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
             <children>
-                <Label alignment="CENTER" prefHeight="27.0" prefWidth="139.0" text="Account Access" textAlignment="CENTER">
-                    <font>
-                        <Font name="Bookshelf Symbol 7" size="18.0" />
-                    </font>
-                </Label>
-                <Separator prefWidth="200.0" />
                 <ComboBox fx:id="personalInfoBox" prefHeight="108.0" prefWidth="146.0" promptText="Edit Personal Info" />
                 <Button mnemonicParsing="false" prefHeight="110.0" prefWidth="146.0" text="View Cart" />
                 <Button mnemonicParsing="false" prefHeight="109.0" prefWidth="146.0" text="My Buy History" />
@@ -32,46 +26,61 @@
         </Label>
         <GridPane layoutX="194.0" layoutY="78.0" prefHeight="280.0" prefWidth="304.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.0" minWidth="10.0" prefWidth="132.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="172.0" minWidth="10.0" prefWidth="172.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label prefHeight="27.0" prefWidth="161.0" text="Personal Information">
+                <Label alignment="CENTER" prefHeight="27.0" prefWidth="144.0" text="Personal Information">
                     <font>
-                        <Font name="Bookshelf Symbol 7" size="14.0"/>
+                        <Font name="Bookshelf Symbol 7" size="14.0" />
                     </font>
                 </Label>
-                <Label prefHeight="17.0" prefWidth="52.0" text="username" GridPane.rowIndex="1"/>
-                <Label text="password" GridPane.rowIndex="2"/>
-                <Label text="role" GridPane.rowIndex="3"/>
-                <Label text="name" GridPane.rowIndex="5"/>
-                <Label text="family name" GridPane.rowIndex="6"/>
-                <Label text="e-mail" GridPane.rowIndex="7"/>
-                <Label text="number" GridPane.rowIndex="8"/>
-                <Label text="balance" GridPane.rowIndex="4"/>
-                <Label fx:id="usernameLabel" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                <Label fx:id="passwordLabel" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                <Label fx:id="roleLabel" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-                <Label fx:id="balanceLabel" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-                <Label fx:id="nameLabel" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
-                <Label fx:id="familyNameLabel" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
-                <Label fx:id="emailLabel" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
-                <Label fx:id="numberLabel" prefHeight="18.0" prefWidth="0.0" GridPane.columnIndex="1"
-                       GridPane.rowIndex="8"/>
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="72.0" text="username" GridPane.rowIndex="1" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="70.0" text="password" GridPane.rowIndex="2" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="41.0" text="role" GridPane.rowIndex="3" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="51.0" text="name" GridPane.rowIndex="5" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="85.0" text="family name" GridPane.rowIndex="6" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="57.0" text="e-mail" GridPane.rowIndex="7" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="66.0" text="number" GridPane.rowIndex="8" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="61.0" text="balance" GridPane.rowIndex="4" />
+                <Label fx:id="usernameLabel" prefHeight="18.0" prefWidth="171.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label fx:id="passwordLabel" prefHeight="18.0" prefWidth="196.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Label fx:id="roleLabel" prefHeight="18.0" prefWidth="215.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <Label fx:id="balanceLabel" prefHeight="18.0" prefWidth="236.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <Label fx:id="nameLabel" prefHeight="18.0" prefWidth="372.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                <Label fx:id="familyNameLabel" prefHeight="18.0" prefWidth="281.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                <Label fx:id="emailLabel" prefHeight="18.0" prefWidth="352.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                <Label fx:id="numberLabel" prefHeight="18.0" prefWidth="234.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             </children>
         </GridPane>
         <Separator layoutX="180.0" layoutY="121.0" orientation="VERTICAL" prefHeight="263.0" prefWidth="6.0" />
+      <Separator orientation="VERTICAL" prefHeight="200.0" />
+      <Separator layoutX="200.0" layoutY="139.0" prefHeight="11.0" prefWidth="350.0" />
+      <Separator layoutX="200.0" layoutY="164.0" prefHeight="20.0" prefWidth="350.0" />
+      <Separator layoutX="202.0" layoutY="192.0" prefHeight="18.0" prefWidth="350.0" />
+      <Separator layoutX="202.0" layoutY="227.0" prefHeight="18.0" prefWidth="350.0" />
+      <Separator layoutX="204.0" layoutY="261.0" prefHeight="11.0" prefWidth="350.0" />
+      <Separator layoutX="203.0" layoutY="292.0" prefHeight="20.0" prefWidth="350.0" />
+      <Separator layoutX="202.0" layoutY="326.0" prefHeight="11.0" prefWidth="350.0" />
+      <Separator layoutX="203.0" layoutY="350.0" prefHeight="18.0" prefWidth="350.0" />
+      <Separator layoutX="300.0" layoutY="121.0" orientation="VERTICAL" prefHeight="237.0" prefWidth="18.0" />
+          <Label alignment="CENTER" layoutX="27.0" layoutY="86.0" prefHeight="27.0" prefWidth="139.0" text="Account Access" textAlignment="CENTER">
+              <font>
+                  <Font name="Bookshelf Symbol 7" size="18.0" />
+              </font>
+          </Label>
+          <Separator layoutX="23.0" layoutY="104.0" prefHeight="18.0" prefWidth="146.0" />
     </children>
 
 </AnchorPane>
