--- a/src/main/java/graphics/fxml/PurchasingMenu.fxml
+++ b/src/main/java/graphics/fxml/PurchasingMenu.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.PurchaseMenu">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.PurchasingMenu">
     <children>
         <Label alignment="CENTER" layoutX="204.0" layoutY="24.0" prefHeight="59.0" prefWidth="191.0" text="PURCHASE PAGE">
             <font>
