--- a/src/main/java/graphics/fxml/CartMenu.fxml
+++ b/src/main/java/graphics/fxml/CartMenu.fxml
@@ -11,20 +11,20 @@
 <?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.CartMenu">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.CartMenu">
     <bottom>
-        <Button mnemonicParsing="false" text="Back" BorderPane.alignment="CENTER" />
+        <Button mnemonicParsing="false" onAction="#back" text="Back" BorderPane.alignment="CENTER" />
     </bottom>
     <center>
         <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="371.0" prefWidth="165.0">
                     <children>
-                        <Button layoutX="4.0" layoutY="123.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="75.0" text="+" />
-                        <Button layoutX="8.0" layoutY="453.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="159.0" text="Purchase" />
-                        <Button layoutX="87.0" layoutY="123.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="75.0" text="-" />
-                        <TextField layoutX="4.0" layoutY="48.0" prefHeight="42.0" prefWidth="167.0" />
+                        <Button layoutX="4.0" layoutY="123.0" mnemonicParsing="false" onAction="#increaseProduct" prefHeight="35.0" prefWidth="75.0" text="+" />
+                        <Button layoutX="8.0" layoutY="453.0" mnemonicParsing="false" onAction="#purchase" prefHeight="48.0" prefWidth="159.0" text="Purchase" />
+                        <Button layoutX="87.0" layoutY="123.0" mnemonicParsing="false" onAction="#decreaseProduct" prefHeight="35.0" prefWidth="75.0" text="-" />
+                        <TextField fx:id="productTextField" layoutX="4.0" layoutY="48.0" prefHeight="42.0" prefWidth="167.0" />
                         <Label layoutX="8.0" layoutY="14.0" prefHeight="24.0" prefWidth="125.0" text="Product Id" />
                     </children>
                 </AnchorPane>
