--- a/src/main/java/graphics/fxml/CompareMenu.fxml
+++ b/src/main/java/graphics/fxml/CompareMenu.fxml
@@ -7,7 +7,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
             xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.ProductMenu$CompareMenu">
+            xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.CompareMenu">
     <center>
         <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <columns>
