--- a/src/main/java/graphics/fxml/AdminMenu.fxml
+++ b/src/main/java/graphics/fxml/AdminMenu.fxml
@@ -1,14 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="graphics.fxml.AdminMenu"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AdminMenu">
+    <children>
+        <VBox layoutX="24.0" layoutY="113.0" prefHeight="246.0" prefWidth="145.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+            <children>
+                <MenuButton mnemonicParsing="false" prefHeight="33.0" prefWidth="145.0" text="Edit Personal Info">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#editPasswordField" text="Password" />
+                        <MenuItem mnemonicParsing="false" onAction="#editNameField" text="Name" />
+                        <MenuItem mnemonicParsing="false" onAction="#editFamilyNameField" text="Family Name" />
+                        <MenuItem mnemonicParsing="false" onAction="#editEmailField" text="E-mail" />
+                        <MenuItem mnemonicParsing="false" onAction="#editNumberField" text="Number" />
+                    </items>
+                </MenuButton>
+                <Button mnemonicParsing="false" onAction="#goToManageUsersMenu" prefHeight="36.0" prefWidth="145.0" text="Manage Users" />
+                <Button mnemonicParsing="false" onAction="#goToManageProductsMenu" prefHeight="37.0" prefWidth="145.0" text="Manage All Products" />
+                <Button mnemonicParsing="false" onAction="#goToManageCodesMenu" prefHeight="38.0" prefWidth="145.0" text="Manage Discount Codes">
+               <font>
+                  <Font size="11.0" />
+               </font></Button>
+                <Button mnemonicParsing="false" onAction="#goToManageRequestsMenu" prefHeight="37.0" prefWidth="145.0" text="Manage Requests" />
+            <Button layoutX="10.0" layoutY="143.0" mnemonicParsing="false" onAction="#goToManageCategoyMenu" prefHeight="36.0" prefWidth="145.0" text="Manage Categories" />
+            <Button layoutX="10.0" layoutY="174.0" mnemonicParsing="false" onAction="#logout" prefHeight="31.0" prefWidth="145.0" text="logout" />
+            </children>
+        </VBox>
+        <Label alignment="CENTER" contentDisplay="CENTER" ellipsisString="" layoutX="161.0" layoutY="29.0" prefHeight="48.0" prefWidth="278.0" text="WELCOME  ADMIN!" textAlignment="CENTER">
+            <font>
+                <Font name="Bookshelf Symbol 7" size="24.0" />
+            </font>
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </padding>
+        </Label>
+        <GridPane layoutX="194.0" layoutY="78.0" prefHeight="280.0" prefWidth="304.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.0" minWidth="10.0" prefWidth="132.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="172.0" minWidth="10.0" prefWidth="172.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Label alignment="CENTER" prefHeight="27.0" prefWidth="144.0" text="Personal Information">
+                    <font>
+                        <Font name="Bookshelf Symbol 7" size="14.0" />
+                    </font>
+                </Label>
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="72.0" text="username" GridPane.rowIndex="1" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="70.0" text="password" GridPane.rowIndex="2" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="41.0" text="role" GridPane.rowIndex="3" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="51.0" text="name" GridPane.rowIndex="4" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="85.0" text="family name" GridPane.rowIndex="5" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="57.0" text="e-mail" GridPane.rowIndex="6" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="66.0" text="number" GridPane.rowIndex="7" />
+                <Label fx:id="usernameLabel" prefHeight="18.0" prefWidth="171.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label fx:id="passwordLabel" prefHeight="18.0" prefWidth="196.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Label fx:id="roleLabel" prefHeight="18.0" prefWidth="215.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <Label fx:id="balanceLabel" prefHeight="18.0" prefWidth="236.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                <Label fx:id="nameLabel" prefHeight="18.0" prefWidth="372.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <Label fx:id="familyNameLabel" prefHeight="18.0" prefWidth="281.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                <Label fx:id="emailLabel" prefHeight="18.0" prefWidth="352.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                <Label fx:id="numberLabel" prefHeight="18.0" prefWidth="234.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            </children>
+        </GridPane>
+        <Separator layoutX="179.0" layoutY="112.0" orientation="VERTICAL" prefHeight="246.0" prefWidth="6.0" />
+        <Separator orientation="VERTICAL" prefHeight="200.0" />
+        <Separator layoutX="200.0" layoutY="139.0" prefHeight="11.0" prefWidth="350.0" />
+        <Separator layoutX="200.0" layoutY="164.0" prefHeight="20.0" prefWidth="350.0" />
+        <Separator layoutX="202.0" layoutY="192.0" prefHeight="18.0" prefWidth="350.0" />
+        <Separator layoutX="202.0" layoutY="227.0" prefHeight="18.0" prefWidth="350.0" />
+        <Separator layoutX="204.0" layoutY="261.0" prefHeight="11.0" prefWidth="350.0" />
+        <Separator layoutX="203.0" layoutY="292.0" prefHeight="20.0" prefWidth="350.0" />
+        <Separator layoutX="202.0" layoutY="326.0" prefHeight="11.0" prefWidth="350.0" />
+        <Separator layoutX="300.0" layoutY="121.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="18.0" />
+        <Label alignment="CENTER" layoutX="27.0" layoutY="86.0" prefHeight="27.0" prefWidth="139.0" text="Account Access" textAlignment="CENTER">
+            <font>
+                <Font name="Bookshelf Symbol 7" size="18.0" />
+            </font>
+        </Label>
+        <Separator layoutX="23.0" layoutY="104.0" prefHeight="18.0" prefWidth="146.0" />
+    </children>
 
 </AnchorPane>
