--- a/src/main/java/graphics/fxml/MainMenu.fxml
+++ b/src/main/java/graphics/fxml/MainMenu.fxml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.MainMenu">
    <children>
-      <Label layoutX="272.0" layoutY="138.0" text="hiiiiii" />
+      <Label layoutX="160.0" layoutY="79.0" text="WELCOME TO MAIN MENU !">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
+      <Button layoutX="245.0" layoutY="138.0" mnemonicParsing="false" onAction="#goToAccount" prefHeight="51.0" prefWidth="111.0" text="ACCOUNT" />
+      <Button layoutX="245.0" layoutY="200.0" mnemonicParsing="false" onAction="#goToProductsMenu" prefHeight="51.0" prefWidth="111.0" text="PRODUCTS" />
+      <Button layoutX="245.0" layoutY="268.0" mnemonicParsing="false" onAction="#goToSalesMenu" prefHeight="51.0" prefWidth="111.0" text="SALES" />
    </children>
 </AnchorPane>
