--- a/src/main/java/graphics/fxml/LoginMenu.fxml
+++ b/src/main/java/graphics/fxml/LoginMenu.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.LoginMenu">
+<AnchorPane fx:id="back" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.LoginMenu">
    <children>
       <GridPane alignment="BOTTOM_RIGHT" layoutX="205.0" layoutY="159.0" prefHeight="131.0" prefWidth="323.0">
         <columnConstraints>
@@ -53,5 +52,6 @@
          </font>
       </Label>
       <Hyperlink layoutX="340.0" layoutY="321.0" onAction="#goToRegisterMenu" text="SIGN UP" />
+      <Button layoutX="14.0" layoutY="21.0" mnemonicParsing="false" text="back" />
    </children>
 </AnchorPane>
