--- a/src/main/java/graphics/fxml/CustomerMenu.fxml
+++ b/src/main/java/graphics/fxml/CustomerMenu.fxml
@@ -9,11 +9,20 @@
     <children>
         <VBox layoutX="24.0" layoutY="113.0" prefHeight="246.0" prefWidth="145.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
             <children>
-                <ComboBox fx:id="personalInfoBox" prefHeight="108.0" prefWidth="146.0" promptText="Edit Personal Info" />
-                <Button mnemonicParsing="false" prefHeight="110.0" prefWidth="146.0" text="View Cart" />
-                <Button mnemonicParsing="false" prefHeight="109.0" prefWidth="146.0" text="My Buy History" />
-                <Button mnemonicParsing="false" prefHeight="110.0" prefWidth="146.0" text="My Discount Codes" />
-                <Button mnemonicParsing="false" prefHeight="107.0" prefWidth="146.0" text="logout" />
+                <MenuButton mnemonicParsing="false" prefHeight="50.0" prefWidth="149.0" text="Edit Personal Info">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#editPasswordField" text="Password" />
+                        <MenuItem mnemonicParsing="false" onAction="#editNameField" text="Name" />
+                        <MenuItem mnemonicParsing="false" onAction="#editFamilyNameField" text="Family Name" />
+                        <MenuItem mnemonicParsing="false" onAction="#editBalanceField" text="Balance" />
+                        <MenuItem mnemonicParsing="false" onAction="#editEmailField" text="E-mail" />
+                        <MenuItem mnemonicParsing="false" onAction="#editNumberField" text="Number" />
+                    </items>
+                </MenuButton>
+                <Button mnemonicParsing="false" onAction="#goToCartMenu" prefHeight="50.0" prefWidth="146.0" text="View Cart" />
+                <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="146.0" text="My Buy History" />
+                <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="146.0" text="My Discount Codes" />
+                <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="146.0" text="logout" />
             </children>
         </VBox>
         <Label alignment="CENTER" contentDisplay="CENTER" ellipsisString="" layoutX="161.0" layoutY="29.0" prefHeight="48.0" prefWidth="278.0" text="WELCOME CUSTOMER!" textAlignment="CENTER">
@@ -64,23 +73,23 @@
                 <Label fx:id="numberLabel" prefHeight="18.0" prefWidth="234.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             </children>
         </GridPane>
-        <Separator layoutX="180.0" layoutY="121.0" orientation="VERTICAL" prefHeight="263.0" prefWidth="6.0" />
-      <Separator orientation="VERTICAL" prefHeight="200.0" />
-      <Separator layoutX="200.0" layoutY="139.0" prefHeight="11.0" prefWidth="350.0" />
-      <Separator layoutX="200.0" layoutY="164.0" prefHeight="20.0" prefWidth="350.0" />
-      <Separator layoutX="202.0" layoutY="192.0" prefHeight="18.0" prefWidth="350.0" />
-      <Separator layoutX="202.0" layoutY="227.0" prefHeight="18.0" prefWidth="350.0" />
-      <Separator layoutX="204.0" layoutY="261.0" prefHeight="11.0" prefWidth="350.0" />
-      <Separator layoutX="203.0" layoutY="292.0" prefHeight="20.0" prefWidth="350.0" />
-      <Separator layoutX="202.0" layoutY="326.0" prefHeight="11.0" prefWidth="350.0" />
-      <Separator layoutX="203.0" layoutY="350.0" prefHeight="18.0" prefWidth="350.0" />
-      <Separator layoutX="300.0" layoutY="121.0" orientation="VERTICAL" prefHeight="237.0" prefWidth="18.0" />
-          <Label alignment="CENTER" layoutX="27.0" layoutY="86.0" prefHeight="27.0" prefWidth="139.0" text="Account Access" textAlignment="CENTER">
-              <font>
-                  <Font name="Bookshelf Symbol 7" size="18.0" />
-              </font>
-          </Label>
-          <Separator layoutX="23.0" layoutY="104.0" prefHeight="18.0" prefWidth="146.0" />
+        <Separator layoutX="179.0" layoutY="112.0" orientation="VERTICAL" prefHeight="246.0" prefWidth="6.0" />
+        <Separator orientation="VERTICAL" prefHeight="200.0" />
+        <Separator layoutX="200.0" layoutY="139.0" prefHeight="11.0" prefWidth="350.0" />
+        <Separator layoutX="200.0" layoutY="164.0" prefHeight="20.0" prefWidth="350.0" />
+        <Separator layoutX="202.0" layoutY="192.0" prefHeight="18.0" prefWidth="350.0" />
+        <Separator layoutX="202.0" layoutY="227.0" prefHeight="18.0" prefWidth="350.0" />
+        <Separator layoutX="204.0" layoutY="261.0" prefHeight="11.0" prefWidth="350.0" />
+        <Separator layoutX="203.0" layoutY="292.0" prefHeight="20.0" prefWidth="350.0" />
+        <Separator layoutX="202.0" layoutY="326.0" prefHeight="11.0" prefWidth="350.0" />
+        <Separator layoutX="203.0" layoutY="350.0" prefHeight="18.0" prefWidth="350.0" />
+        <Separator layoutX="300.0" layoutY="121.0" orientation="VERTICAL" prefHeight="237.0" prefWidth="18.0" />
+        <Label alignment="CENTER" layoutX="27.0" layoutY="86.0" prefHeight="27.0" prefWidth="139.0" text="Account Access" textAlignment="CENTER">
+            <font>
+                <Font name="Bookshelf Symbol 7" size="18.0" />
+            </font>
+        </Label>
+        <Separator layoutX="23.0" layoutY="104.0" prefHeight="18.0" prefWidth="146.0" />
     </children>
 
 </AnchorPane>
