--- a/src/main/java/graphics/fxml/RegisterMenu.fxml
+++ b/src/main/java/graphics/fxml/RegisterMenu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,7 +9,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.RegisterMenu">
    <children>
@@ -18,7 +18,7 @@
          </font>
       </Label>
       <Label layoutX="81.0" layoutY="99.0" text="PLEASE ENTER INFORMATION BELOW :" />
-      <GridPane layoutX="186.0" layoutY="127.0" prefHeight="195.0" prefWidth="289.0">
+      <GridPane layoutX="165.0" layoutY="152.0">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -27,7 +27,7 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -36,24 +36,27 @@
          <children>
             <Label text="username :" />
             <Label text="password :" GridPane.rowIndex="1" />
-            <Label text="role :" GridPane.rowIndex="2" />
             <TextField fx:id="username" GridPane.columnIndex="1" />
             <TextField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="role" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="name" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="familyName" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="number" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <Label text="name :" GridPane.rowIndex="3" />
-            <Label text="family name :" GridPane.rowIndex="4" />
-            <Label text="e-mail :" GridPane.rowIndex="5" />
-            <Label text="number :" GridPane.rowIndex="6" />
+            <TextField fx:id="name" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="familyName" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="number" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label text="name :" GridPane.rowIndex="2" />
+            <Label text="family name :" GridPane.rowIndex="3" />
+            <Label text="e-mail :" GridPane.rowIndex="4" />
+            <Label text="number :" GridPane.rowIndex="5" />
             <Label fx:id="usernameMessage" prefHeight="17.0" prefWidth="52.0" GridPane.columnIndex="2" />
             <Label fx:id="passwordMessage" prefHeight="17.0" prefWidth="51.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label fx:id="roleMessage" prefHeight="17.0" prefWidth="44.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label fx:id="companyLabel" text="company name :" GridPane.rowIndex="6" />
+            <TextField fx:id="company" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
-      <Button layoutX="305.0" layoutY="343.0" mnemonicParsing="false" onAction="#register" text="SIGN UP" />
+      <Button layoutX="279.0" layoutY="367.0" mnemonicParsing="false" onAction="#register" text="SIGN UP" />
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#back" text="back" />
+      <Label fx:id="message" layoutX="197.0" layoutY="404.0" prefHeight="17.0" prefWidth="237.0" textAlignment="CENTER" />
+      <CheckBox fx:id="adminRole" layoutX="149.0" layoutY="127.0" mnemonicParsing="false" text="Admin" />
+      <CheckBox fx:id="sellerRole" layoutX="265.0" layoutY="127.0" mnemonicParsing="false" text="Seller" />
+      <CheckBox fx:id="customerRole" layoutX="366.0" layoutY="127.0" mnemonicParsing="false" text="customer" />
    </children>
 </AnchorPane>
