--- a/src/main/java/graphics/fxml/RegisterMenu.fxml
+++ b/src/main/java/graphics/fxml/RegisterMenu.fxml
@@ -54,7 +54,7 @@
       </GridPane>
       <Button layoutX="279.0" layoutY="367.0" mnemonicParsing="false" onAction="#register" text="SIGN UP" />
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#back" text="back" />
-      <Label fx:id="message" layoutX="197.0" layoutY="404.0" prefHeight="17.0" prefWidth="237.0" textAlignment="CENTER" />
+      <Label fx:id="message" contentDisplay="CENTER" layoutX="205.0" layoutY="399.0" prefHeight="17.0" prefWidth="237.0" textAlignment="CENTER" />
       <CheckBox fx:id="adminRole" layoutX="149.0" layoutY="127.0" mnemonicParsing="false" text="Admin" />
       <CheckBox fx:id="sellerRole" layoutX="265.0" layoutY="127.0" mnemonicParsing="false" text="Seller" />
       <CheckBox fx:id="customerRole" layoutX="366.0" layoutY="127.0" mnemonicParsing="false" text="customer" />
