--- a/src/main/java/graphics/fxml/AllProductsMenu.fxml
+++ b/src/main/java/graphics/fxml/AllProductsMenu.fxml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AllProductsMenu">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.AllProductsMenu">
    <children>
       <Button layoutX="24.0" layoutY="28.0" mnemonicParsing="false" onAction="#back" text="back" />
+      <Button layoutX="14.0" layoutY="214.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Filter" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="79.0" prefHeight="22.0" prefWidth="89.0" text="Max Price">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
+      <TextField layoutX="109.0" layoutY="71.0" prefHeight="38.0" prefWidth="106.0" />
+      <Label alignment="CENTER" layoutX="13.0" layoutY="127.0" prefHeight="32.0" prefWidth="89.0" text="Product Name" />
+      <TextField layoutX="109.0" layoutY="124.0" prefHeight="38.0" prefWidth="106.0" />
+      <Label alignment="CENTER" layoutX="13.0" layoutY="168.0" prefHeight="32.0" prefWidth="76.0" text="Category" />
+      <ChoiceBox layoutX="99.0" layoutY="168.0" prefHeight="32.0" prefWidth="126.0" />
+      <CheckBox layoutX="15.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Price" />
+      <Button layoutX="138.0" layoutY="214.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Disable Filter" />
+      <CheckBox layoutX="146.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Average Rate" />
+      <Button layoutX="14.0" layoutY="321.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Sort" />
+      <Button layoutX="138.0" layoutY="321.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
    </children>
 </AnchorPane>
