--- a/src/main/java/graphics/fxml/CustomerMenu.fxml
+++ b/src/main/java/graphics/fxml/CustomerMenu.fxml
@@ -20,7 +20,7 @@
                     </items>
                 </MenuButton>
                 <Button mnemonicParsing="false" onAction="#goToCartMenu" prefHeight="41.0" prefWidth="146.0" text="View Cart" />
-                <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="146.0" text="My Buy History" />
+                <Button fx:id="goToBuyLogPage" mnemonicParsing="false" prefHeight="41.0" prefWidth="146.0" text="My Buy History" />
                 <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="146.0" text="My Discount Codes" />
             <Button mnemonicParsing="false" onAction="#goToMainMenu" prefHeight="41.0" prefWidth="156.0" text="Go To Main Menu" />
                 <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="146.0" text="logout" />
