--- a/src/main/java/graphics/fxml/ThisPersonBuyLogs.fxml
+++ b/src/main/java/graphics/fxml/ThisPersonBuyLogs.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.thisPersonBuyLogs">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.ThisPersonBuyLogs">
     <bottom>
         <Button mnemonicParsing="false" onAction="#back" prefHeight="6.0" prefWidth="42.0" text="Back" BorderPane.alignment="CENTER" />
     </bottom>
@@ -13,12 +13,12 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <TableView layoutX="81.0" layoutY="72.0" prefHeight="352.0" prefWidth="448.0">
+                  <TableView fx:id="tableView" layoutX="81.0" layoutY="72.0" prefHeight="352.0" prefWidth="448.0">
                     <columns>
                       <TableColumn fx:id="buyLogCode" prefWidth="86.80001831054688" text="Code" />
                       <TableColumn fx:id="dateColumn" prefWidth="116.20002746582031" text="Date" />
                         <TableColumn fx:id="totalPriceColumn" prefWidth="119.0" text="Total Price" />
-                        <TableColumn prefWidth="124.0" text="Amount of Discount" />
+                        <TableColumn fx:id="amountOfDiscountColumn" prefWidth="124.0" text="Amount of Discount" />
                     </columns>
                   </TableView>
                   <Label alignment="CENTER" layoutX="218.0" layoutY="23.0" prefHeight="40.0" prefWidth="144.0" text="All Buy Logs">
@@ -29,13 +29,13 @@
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="138.0" prefWidth="598.0">
                <children>
-                  <TextField layoutX="247.0" layoutY="45.0" prefHeight="38.0" prefWidth="104.0" />
+                  <TextField fx:id="logCode" layoutX="247.0" layoutY="45.0" prefHeight="38.0" prefWidth="104.0" />
                   <Label alignment="CENTER" layoutX="144.0" layoutY="14.0" text="Enter buy log code to show you the complete log!" textAlignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Button layoutX="265.0" layoutY="90.0" mnemonicParsing="false" text="Show Log" />
+                  <Button layoutX="265.0" layoutY="90.0" mnemonicParsing="false" onAction="#showBuyLog" text="Show Log" />
                </children></AnchorPane>
         </items>
       </SplitPane>
