--- a/src/main/java/graphics/fxml/MainMenu.fxml
+++ b/src/main/java/graphics/fxml/MainMenu.fxml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import java.net.URL?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.MainMenu">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.MainMenu">
+   <stylesheets>
+      <URL value="@cssSheets/basicStyle.css" />
+   </stylesheets>
    <stylesheets>
       <URL value="@cssSheets/MainMenu.css" />
    </stylesheets>
    <children>
-      <Label layoutX="160.0" layoutY="79.0" text="WELCOME TO MAIN MENU !">
+      <Label layoutX="130.0" layoutY="37.0" text="WELCOME TO MAIN MENU !">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Button layoutX="245.0" layoutY="138.0" mnemonicParsing="false" onAction="#goToAccount" prefHeight="51.0" prefWidth="111.0" text="ACCOUNT" />
-      <Button layoutX="245.0" layoutY="200.0" mnemonicParsing="false" onAction="#goToProductsMenu" prefHeight="51.0" prefWidth="111.0" text="PRODUCTS" />
-      <Button layoutX="245.0" layoutY="268.0" mnemonicParsing="false" onAction="#goToSalesMenu" prefHeight="51.0" prefWidth="111.0" text="SALES" />
+      <Button layoutX="40.0" layoutY="267.0" mnemonicParsing="false" onAction="#goToAccount" prefHeight="55.0" prefWidth="115.0" text="ACCOUNT" />
+      <Button layoutX="40.0" layoutY="340.0" mnemonicParsing="false" onAction="#goToProductsMenu" prefHeight="55.0" prefWidth="115.0" text="PRODUCTS" />
+      <Button layoutX="40.0" layoutY="416.0" mnemonicParsing="false" onAction="#goToSalesMenu" prefHeight="55.0" prefWidth="115.0" text="SALES" />
    </children>
 </AnchorPane>
