--- a/src/main/java/graphics/fxml/PurchasingMenu.fxml
+++ b/src/main/java/graphics/fxml/PurchasingMenu.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.PurchasingMenu">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.PurchasingMenu">
+    <stylesheets>
+        <URL value="@cssSheets/PurchasingMenu.css" />
+    </stylesheets>
     <children>
         <Label alignment="CENTER" layoutX="204.0" layoutY="24.0" prefHeight="59.0" prefWidth="191.0" text="PURCHASE PAGE">
             <font>
@@ -59,9 +58,9 @@
                 <Font name="Bookshelf Symbol 7" size="18.0" />
             </font>
         </Label>
-        <Button layoutX="175.0" layoutY="326.0" mnemonicParsing="false" onAction="#checkInputsValidity" prefHeight="37.0" prefWidth="90.0" text="Purchase" />
-        <Button layoutX="311.0" layoutY="325.0" mnemonicParsing="false" onAction="#goToPreviousPage" prefHeight="37.0" prefWidth="90.0" text="Cancel" />
-        <Button layoutY="-3.0" mnemonicParsing="false" onAction="#back" prefHeight="48.0" prefWidth="90.0" text="Back" />
+        <Button layoutX="175.0" layoutY="326.0" mnemonicParsing="false" onAction="#checkInputsValidity" prefHeight="50.0" prefWidth="100.0" text="Purchase" />
+        <Button layoutX="311.0" layoutY="325.0" mnemonicParsing="false" onAction="#goToPreviousPage" prefHeight="50.0" prefWidth="100.0" text="Cancel" />
+        <Button layoutY="-3.0" mnemonicParsing="false" onAction="#back" prefHeight="50.0" prefWidth="90.0" text="Back" />
     </children>
 
 </AnchorPane>
