--- a/src/main/java/graphics/fxml/RegisterMenu.fxml
+++ b/src/main/java/graphics/fxml/RegisterMenu.fxml
@@ -13,6 +13,9 @@
 <?import java.net.URL?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.RegisterMenu">
     <stylesheets>
+        <URL value="@cssSheets/basicStyle.css" />
+    </stylesheets>
+    <stylesheets>
         <URL value="@cssSheets/RegisterMenu.css" />
     </stylesheets>
    <children>
