--- a/src/main/java/graphics/fxml/cssSheets/SellerMenu.css
+++ b/src/main/java/graphics/fxml/cssSheets/SellerMenu.css
@@ -2,7 +2,7 @@
     -fx-font-size: 14px;
     -fx-font-family: sans-serif;
     -fx-background-image: url("mainbg.jpg");
-    -fx-background-size: 600 600;
+    -fx-background-size: 600 500;
 }
 
 .button {
@@ -10,20 +10,21 @@
 
     -fx-background-color:
             linear-gradient(#8B008B 0%, #8B008B 25%, #8B008B 75%, #8B008B 100%),
-            linear-gradient(#020b02, #3a3a3a),
+            linear-gradient(#212121, #212121),
             linear-gradient(#b9b9b9 0%, #c2c2c2 20%, #afafaf 80%, #c8c8c8 100%),
-            linear-gradient(#f5f5f5 0%, #dbdbdb 50%, #cacaca 51%, #d7d7d7 100%);
-        -fx-background-insets: 0,1,4,5;
-        -fx-background-radius: 9,8,5,4;
+            linear-gradient(#E1BEE7  0%, #E1BEE7  50%, #E1BEE7 51%, #E1BEE7 100%);
+        -fx-background-insets: 10,11,14,15;
+        -fx-background-radius: 19,18,15,14;
         -fx-padding: 3 6 6 6;
         -fx-font-family: "Helvetica";
         -fx-font-size: 14px;
         -fx-font-weight: bold;
-        -fx-text-fill: #333333;
+        -fx-text-fill: #212121;
         -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 1, 0.0 , 0 , 1);
 }
 
 .label {
-    -fx-font-size: 20px;
-    -fx-text-fill: #FFF0F5;
+    -fx-font-size: 25px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #212121;
 }
